--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -9,22 +9,22 @@ main:
     weight: 10
   - name: Posts
     url: '#posts'
-    weight: 20
+    weight: 0
   - name: Projects
     url: '#projects'
     weight: 30
   - name: Talks
     url: '#talks'
-    weight: 40
+    weight: 0
   - name: Publications
     url: '#featured'
-    weight: 50
+    weight: 0
   - name: Contact
     url: '#contact'
     weight: 60
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
-#  - name: CV
-#    url: uploads/resume.pdf
-#    weight: 70
+ - name: CV
+ url: file:///Users/samridhivaid/Documents/Personal%20documents/Vaid_Samridhi_Resume.pdf
+ weight: 70
