--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -26,5 +26,5 @@ main:
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/uploads/resume.pdf` and uncomment the lines below.
  - name: CV
- url: file:///Users/samridhivaid/Documents/Personal%20documents/Vaid_Samridhi_Resume.pdf
+ url: uploads/resume.pdf
  weight: 70
