--- a/config/_default/menus.yaml
+++ b/config/_default/menus.yaml
@@ -7,9 +7,15 @@ main:
   - name: Home
     url: '#about'
     weight: 10
+ - name: Experience
+   url: '#experience'
+   weight: 20
+     - name: Accomplishments
+    url: '#accomplishments'
+    weight: 30
   - name: Projects
     url: '#projects'
-    weight: 30
+    weight: 40
   - name: Contact
     url: '#contact'
     weight: 60
